# ControlUI

./: .flake8  .gitignore  README.md  environment.yml  flake.nix  pyproject.toml  setup.py
configurations/: tileboard_layouts.yaml
examples/: python_script_example.py
src/qcmanager/: README.md  __init__.py  session.py  utils.py  yaml_format.py
src/qcmanager/hw/: __init__.py  _rocv2.cc  rocv2.py  tileboard_zmq.py
src/qcmanager/plotting/: README.md  __init__.py  common.py  dummy_procedure.py  dummy_process2.py  led_scan_testbeam.py
src/qcmanager/procedures/: README.md  __init__.py  _argument_validation.py  _array_processing.py  _parsing.py  _procedure_base.py  dummy_procedure.py  dummy_process2.py  led_scan_testbeam.py  pedestal_correction.py  tb_slowcontrol.py
src/qcmanager/qt_gui/: README.md  __init__.py  gui_session.py  qt_helper.py
src/qcmanager/qt_gui/hwpanels/: README.md  __init__.py  tbconnection.py  temp_sensor.py
src/qcmanager/qt_gui/session_browser/: README.md  __init__.py  message_display.py  outer_container.py  procedure_display.py  procedure_single.py  session_loading.py
tests/: .gitignore
