[project]
name = "qcmanager"
dependencies = [
  "uproot==4.3.7",
  "awkward==1.10.4",
  "pyyaml",
  "tqdm",
  "zmq",
  "nested_dict",
  "hist",
  # For GUI
  "matplotlib",
  "PyQt5",
  "pyqtgraph"
]
dynamic = ["version"]

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "qcmanager.__version__"}
